Fixed container shifting on timer change

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -593,6 +593,10 @@ header a, {
   height: 100vh;
 }
 
+.w-\[1\.15em\] {
+  width: 1.15em;
+}
+
 .w-\[95\%\] {
   width: 95%;
 }
